--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GZ Systems | AI-GIS & Smart City Consulting</title>
+    <title>GZ Systems | Smart City Consultants</title>
     <meta name="description" content="GZ Systems - מובילים את מהפכת העיר החכמה. ייעוץ אסטרטגי, מערכות GIS, וניהול מכרזים טכנולוגיים לרשויות מקומיות." />
     
-    <!-- Fonts: Heebo for clean, modern Hebrew typography -->
+    <!-- Fonts: Heebo for Hebrew, Inter for English numbers/clean look -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -18,40 +18,31 @@
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Heebo', 'sans-serif'],
+              sans: ['Heebo', 'Inter', 'sans-serif'],
             },
             colors: {
               slate: {
                 850: '#15202e',
+                900: '#0f172a',
               },
-              // AI-GIS Palette
-              violet: {
-                600: '#7c3aed',
-                900: '#4c1d95',
-              },
-              cyan: {
-                400: '#22d3ee',
-                500: '#06b6d4',
-              },
+              // Premium Corporate Palette
               brand: {
-                purple: '#6d28d9',
-                blue: '#2563eb',
-                teal: '#0d9488', 
+                black: '#111111',
+                dark: '#1a1a1a',
+                primary: '#2563eb', // A solid, trustworthy blue
+                accent: '#0f172a',  // Deep midnight
+                light: '#f8fafc',
               }
             },
             backgroundImage: {
-              'ai-gradient': 'linear-gradient(135deg, #7c3aed 0%, #2563eb 50%, #06b6d4 100%)',
-              'ai-gradient-text': 'linear-gradient(to left, #7c3aed, #06b6d4)',
-              'ai-mesh': 'radial-gradient(at 0% 0%, rgba(124, 58, 237, 0.15) 0px, transparent 50%), radial-gradient(at 100% 100%, rgba(6, 182, 212, 0.15) 0px, transparent 50%)',
+              'subtle-gradient': 'linear-gradient(to bottom, #f8fafc, #ffffff)',
+              'tech-grid': 'linear-gradient(to right, #80808012 1px, transparent 1px), linear-gradient(to bottom, #80808012 1px, transparent 1px)',
             },
             animation: {
               'fade-in-up': 'fadeInUp 0.8s ease-out forwards',
               'fade-in': 'fadeIn 1s ease-out forwards',
-              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'blob': 'blob 10s infinite',
               'float': 'float 6s ease-in-out infinite',
-              'float-delayed': 'float 6s ease-in-out 3s infinite',
-              'spin-slow': 'spin 15s linear infinite',
-              'ping-slow': 'ping 3s cubic-bezier(0, 0, 0.2, 1) infinite',
             },
             keyframes: {
               fadeInUp: {
@@ -62,9 +53,15 @@
                 '0%': { opacity: '0' },
                 '100%': { opacity: '1' },
               },
+              blob: {
+                '0%': { transform: 'translate(0px, 0px) scale(1)' },
+                '33%': { transform: 'translate(30px, -50px) scale(1.1)' },
+                '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
+                '100%': { transform: 'translate(0px, 0px) scale(1)' },
+              },
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-20px)' },
+                '50%': { transform: 'translateY(-10px)' },
               }
             }
           }
@@ -75,27 +72,14 @@
       body {
         font-family: 'Heebo', sans-serif;
         background-color: #ffffff;
-        color: #1e293b;
+        color: #111111;
         scroll-behavior: smooth;
         overflow-x: hidden;
       }
-      /* Tech Grid Pattern */
-      .bg-tech-grid {
-        background-size: 60px 60px;
-        background-image: 
-          linear-gradient(to right, rgba(99, 102, 241, 0.05) 1px, transparent 1px),
-          linear-gradient(to bottom, rgba(99, 102, 241, 0.05) 1px, transparent 1px);
-      }
-      .glass-nav {
-        background: rgba(255, 255, 255, 0.8);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-      }
-      .gradient-text {
-        background-clip: text;
-        -webkit-background-clip: text;
-        color: transparent;
-        background-image: linear-gradient(to left, #7c3aed, #06b6d4);
+      /* Clean, minimal selection color */
+      ::selection {
+        background: #111111;
+        color: #ffffff;
       }
     </style>
   <script type="importmap">
