updat another fiels

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>GZ Consulting | Smart City Consultants</title>
     <meta name="description" content="GZ Consulting - מובילים את מהפכת העיר החכמה. ייעוץ אסטרטגי, מערכות GIS, וניהול מכרזים טכנולוגיים לרשויות מקומיות." />
+    <link rel="icon" type="image/svg+xml" href="/gzi-logo.svg" />
     
     <!-- Fonts: Heebo for Hebrew, Inter for English numbers/clean look -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
